--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "This is React chrome extension boilerplate",
   "main": "index.js",
   "scripts": {
+    "commit": "git add -A && git-cz",
     "start": "node webpack/server",
     "build": "NODE_ENV=production rm -rf crx && webpack --config webpack/webpack.config.prod.js && node webpack/package",
-    "pub": "npm run build && npm run publish"
+    "publish": "npm run build && node webpack/publish"
   },
+  "extensionId": "This is your extension id",
+  "clientId": "This is your client id",
+  "clientSecret": "This is your client secret",
+  "refreshToken": "This is your refresh token",
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
     "babel-core": "^6.14.0",
@@ -17,6 +22,8 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chrome-webstore-upload": "^0.2.1",
+    "commitizen": "^2.9.5",
     "ejs": "^2.5.5",
     "execa": "^0.6.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
